--- a/src/Components/styles/EventcardStyle.css
+++ b/src/Components/styles/EventcardStyle.css
@@ -2,12 +2,14 @@
     
     body {
         /* background: radial-gradient(circle at top, #1a002b, #0a001a); */
-        color: #ffffff;
+        color: #00ffffcc;
         font-family: "Orbitron", sans-serif;
         margin: 0;
         padding: 0;
         width: 100%;
         overflow-x: hidden;
+        color: #00eaff;
+    text-shadow: 0 0 5px #00eaff;
         /* Prevents horizontal scrolling */
     }
     
@@ -139,7 +141,7 @@
     
     .cardDetails {
         position: fixed;
-        top: 50%;
+        top: 55%;
         left: 50%;
         transform: translate(-50%, -50%);
         background: rgba(10, 10, 30, 0.95);
@@ -229,7 +231,7 @@
     
     .cardDetails {
         position: fixed;
-        top: 50%;
+        top: 55%;
         left: 50%;
         transform: translate(-50%, -50%);
         background: rgba(10, 10, 30, 0.95);
@@ -353,7 +355,7 @@ body::before {
     
     .event-3 {
         overflow: hidden;
-        opacity: 40%;
+        opacity: 28%;
         z-index: -1;
         position: absolute;
         /* left: -20%;
@@ -367,7 +369,7 @@ body::before {
             width: 100%;
             left: 0%;
             aspect-ratio: 1/1;
-            bottom: 20%;
+            top: 0%;
         }
     }
     
